--- a/.github/workflows/clippy.yaml
+++ b/.github/workflows/clippy.yaml
@@ -1,5 +1,5 @@
 on: push
-name: Clippy check
+name: CI Checks
 
 # Make sure CI fails on all warnings, including Clippy lints
 env:
@@ -12,4 +12,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run Clippy
         run: cargo clippy --all-targets --all-features
-
+  cargo_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Cargo Test
+        run: cargo test
