--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,14 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.70"
 hyper = "0.14.25"
+rand = "0.8.5"
 tokio = { version = "1.27.0", features = ["full"] }
+tokio-timer = "0.2.13"
 
 [lib]
-name = "divercore"
+name = "diver"
 path = "src/lib.rs"
+
+[[bin]]
+name = "divercli"
+path = "src/diver.rs"
