--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ hyper = "0.14.25"
 rand = "0.8.5"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-timer = "0.2.13"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+clap = { version = "4.2.2", features = ["derive", "cargo"] }
 
 [lib]
 name = "diver"
