--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,23 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
-hyper = "0.14.25"
 rand = "0.8.5"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-timer = "0.2.13"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "4.2.2", features = ["derive", "cargo"] }
+
+# They have an issue that's fixed upstream, but not by the crate published
+boringtun = { git = "https://github.com/jdholdren/boringtun.git", tag = "0.5.3" }
+tun = { version = "0.5", features = ["async"] }
+hyper = { version = "1.0.0-rc.3", features = ["full"] }
+http-body-util = "0.1.0-rc.2"
+reqwest = { version = "0.11.16", features = ["socks"] }
+x25519-dalek = { version = "=2.0.0-rc.2", features = [
+    "reusable_secrets",
+    "static_secrets",
+] }
 
 [lib]
 name = "diver"
